# arxiv-researcher

./: .env  .env.example  .gitignore  agent.ipynb  agent.py  agent_class.py  app.py  build_index.ipynb  check_models.py  constants.py  index_manager.py  index_manager_pinecone.py  ingest_local_pdfs.py  pinecone.ipynb  pyproject.toml  requirements.txt  tools.py
