[project]
name = "code"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nvquangyn02", email = "vuquangnguyen2812@gmail.com"},
]
dependencies = ["python-dotenv>=1.2.1", "arxiv>=2.4.0", "notebook>=7.5.3", "llama-index>=0.14.13", "llama-index-llms-gemini>=0.6.2", "llama-index-embeddings-gemini>=0.4.2", "streamlit>=1.53.1", "nest-asyncio>=1.6.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
